--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -13,7 +13,7 @@
   &-detail {
     background-color: #ffff;
     color: #000000b0;
-    border: 1px solid var(--first-color);
+    border: 1px solid var(--first-color-lighten);
     row-gap: 2rem;
     margin-top: var(--mb-0-75);
 
