--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
   --title-color: hsl(var(--hue), 4%, 15%);
   --text-color: hsl(var(--hue), 4%, 35%);
   --text-color-light: hsl(var(--hue), 4%, 65%);
+  --text-color-white:hsl(0, 0%, 100%, 1);
   --body-color: hsl(var(--hue), 0%, 100%);
   --container-color: #FFF;
   --scroll-bar-color: hsl(var(--hue), 4%, 85%);
@@ -172,7 +173,7 @@ body.dark-theme {
 .button-detail {
   background-color: #ffff;
   color: #000000b0;
-  border: 1px solid var(--first-color);
+  border: 1px solid var(--first-color-lighten);
   row-gap: 2rem;
   margin-top: var(--mb-0-75);
 }
@@ -243,6 +244,7 @@ body.dark-theme {
 
 .footer__description, .footer__link {
   font-size: var(--small-font-size);
+  color: var(--text-color-white);
 }
 
 .footer__links {
@@ -254,7 +256,7 @@ body.dark-theme {
 .footer__links a {
   display: inline-block;
   font-size: 14px;
-  color: var(--text-color);
+  color: var(--text-color-white);
   z-index: 1;
   position: relative;
 }
