--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -17,6 +17,7 @@
     &__description,
     &__link{
         font-size: var(--small-font-size);
+        color: var(--text-color-white);
     }
     &__links{
         display: grid;
@@ -26,7 +27,7 @@
         a {
             display: inline-block;
             font-size: 14px;
-            color: var(--text-color);
+            color: var(--text-color-white);
             z-index: 1;
             position: relative;
 
