--- a/assets/scss/config/_variables.scss
+++ b/assets/scss/config/_variables.scss
@@ -15,6 +15,7 @@
     --title-color: hsl(var(--hue), 4%, 15%);
     --text-color: hsl(var(--hue), 4%, 35%);
     --text-color-light: hsl(var(--hue), 4%, 65%);
+    --text-color-white:hsl(0, 0%, 100%, 1);
     --body-color: hsl(var(--hue), 0%, 100%);
     --container-color: #FFF;
     --scroll-bar-color: hsl(var(--hue), 4%, 85%);
