--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -224,7 +224,7 @@ body.dark-theme {
 }
 
 .footer {
-  background: var(--first-color-lighten);
+  background: var(--bg-color-one);
   padding-bottom: 2rem;
 }
 
@@ -244,7 +244,7 @@ body.dark-theme {
 
 .footer__description, .footer__link {
   font-size: var(--small-font-size);
-  color: var(--text-color-white);
+  color: var(--text-color);
 }
 
 .footer__links {
@@ -256,7 +256,7 @@ body.dark-theme {
 .footer__links a {
   display: inline-block;
   font-size: 14px;
-  color: var(--text-color-white);
+  color: var(--text-color);
   z-index: 1;
   position: relative;
 }
