--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -1,6 +1,6 @@
 //Footer
 .footer{
-    background: var(--first-color-lighten);
+    background: var(--bg-color-one);
     padding-bottom: 2rem;
     &__container{
         row-gap: 2rem;
@@ -17,7 +17,7 @@
     &__description,
     &__link{
         font-size: var(--small-font-size);
-        color: var(--text-color-white);
+        color: var(--text-color);
     }
     &__links{
         display: grid;
@@ -27,7 +27,7 @@
         a {
             display: inline-block;
             font-size: 14px;
-            color: var(--text-color-white);
+            color: var(--text-color);
             z-index: 1;
             position: relative;
 
