--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,12 +57,18 @@ html {
   scroll-behavior: smooth;
 }
 
+html, body {
+  overflow-x: hidden;
+}
+
 body {
   margin: var(--header-height) 0 0 0;
   font-family: var(--body-font);
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
+  -webkit-transition: .5s;
+  transition: .5s;
 }
 
 h1, h2, h3 {
