--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -9,13 +9,17 @@ html{
     scroll-behavior: smooth;
 }
 
+html,body{
+    overflow-x: hidden;
+}
+
 body{
     margin: var(--header-height) 0 0 0;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     background-color: var(--body-color);
     color: var(--text-color);
-    //transition: .5s; // For animation dark mode
+    transition: .5s; // For animation dark mode
 }
 
 h1,h2,h3{
