--- a/assets/scss/components/_mediaqueries.scss
+++ b/assets/scss/components/_mediaqueries.scss
@@ -139,7 +139,7 @@
             visibility: hidden;
             opacity: 0;
             transition: 250ms all;
-            background-color: var(--bg-color-one);
+            background-color: rgba(0,86,130, .9);
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
             padding: 1rem;
             line-height: 2.5rem;
@@ -149,7 +149,7 @@
             font-size: var(--small-font-size);
 
             a {
-                color: var(--text-color);
+                color: var(--text-color-white);
             }
         }
 
